--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
   <body>
     Hi my name is Steve. I like playing the piano.
   </body>
+  <h1 style="background-color:DodgerBlue;">Hello World</h1>
+  <p style="background-color:Tomato;">Lorem ipsum...</p>
+
 </html>
