--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     Hi my name is Steve. I like playing the piano.
   </body>
   <h1 style="background-color:DodgerBlue;">Hello World</h1>
-  <p style="background-color:Tomato;">Lorem ipsum...</p>
+  <p style="background-color:Tomato;">Bye World</p>
+  <img src="img_chania.jpg" alt="Flowers in Chania">
 
 </html>
