--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <body>
     Hi my name is Steve. I like playing the piano.
-  </body>
-  <h1 style="background-color:DodgerBlue;">Hello World</h1>
+    <h1 style="background-color:DodgerBlue;">Hello World</h1>
   <p style="background-color:Tomato;">Bye World</p>
+  <img SRC = "WIN_20230110_10_10_37_Pro.jpg" alt="sam">
+  </body>
   
 </html>
